force-app/main/default/objects/ssot__WebPageEngagementSummary__dlm/fields/ssot__AdId__c.field-meta.xml
<CustomField>
    <fullName>ssot__AdId__c</fullName>
    <label>Ad Id</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>AdId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>