force-app/main/default/objects/ssot__WebPageEngagementSummary__dlm/fields/ssot__WebPageEngagementSummaryDateTime__c.field-meta.xml
<CustomField>
    <fullName>ssot__WebPageEngagementSummaryDateTime__c</fullName>
    <label>Web Page Engagement Summary Date Time</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>WebPageEngagementSummaryDateTime</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>DateTime</type>
</CustomField>