force-app/main/default/objects/ssot__WebPageEngagementSummary__dlm/fields/ssot__WebsiteNewVisitsCount__c.field-meta.xml
<CustomField>
    <fullName>ssot__WebsiteNewVisitsCount__c</fullName>
    <label>Website New Visits</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>WebsiteNewVisitsCount</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>