force-app/main/default/objects/ssot__WebPageEngagementSummary__dlm/fields/ssot__WebsitePageExitsCount__c.field-meta.xml
<CustomField>
    <fullName>ssot__WebsitePageExitsCount__c</fullName>
    <label>Website Page Exits</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>WebsitePageExitsCount</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>