force-app/main/default/objects/ssot__WebPageEngagementSummary__dlm/fields/ssot__WebsitePageViewsCount__c.field-meta.xml
<CustomField>
    <fullName>ssot__WebsitePageViewsCount__c</fullName>
    <label>Website Page Views</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>WebsitePageViewsCount</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>