force-app/main/default/objects/ssot__WebPageEngagementSummary__dlm/fields/ssot__WebsiteSourceId__c.field-meta.xml
<CustomField>
    <fullName>ssot__WebsiteSourceId__c</fullName>
    <label>Website Source Id</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>WebsiteSourceId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>