force-app/main/default/objects/ssot__WebPageEngagementSummary__dlm/fields/ssot__WebsiteTransactionRevenueAmount__c.field-meta.xml
<CustomField>
    <fullName>ssot__WebsiteTransactionRevenueAmount__c</fullName>
    <label>Website Transaction Revenue</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>WebsiteTransactionRevenueAmount</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>