force-app/main/default/objects/ssot__WebPageEngagementSummary__dlm/fields/ssot__WebsiteTransactionValueAmount__c.field-meta.xml
<CustomField>
    <fullName>ssot__WebsiteTransactionValueAmount__c</fullName>
    <label>Website Transaction Value</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>WebsiteTransactionValueAmount</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>