force-app/main/default/objects/ssot__WebPageEngagementSummary__dlm/fields/ssot__WebsiteVisitorBouncesCount__c.field-meta.xml
<CustomField>
    <fullName>ssot__WebsiteVisitorBouncesCount__c</fullName>
    <label>Website Visitor Bounces</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>WebsiteVisitorBouncesCount</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>