force-app/main/default/objects/ssot__WebPageEngagementSummary__dlm/fields/ssot__WebsiteVisitsCount__c.field-meta.xml
<CustomField>
    <fullName>ssot__WebsiteVisitsCount__c</fullName>
    <label>Website Visits</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>WebsiteVisitsCount</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>